--- a/index.html
+++ b/index.html
@@ -68,6 +68,21 @@ function loadFromCloud() {
       { name: "黑輪王map_7-1", minutes: [780, 1020] },
       { name: "雪毛怪人", minutes: [45, 68] },
       { name: "厄運死神", minutes: [45, 105] },
+      { name: "紅寶王", minutes: [23, 30] },
+      { name: "樹妖王", minutes: [23, 30] },
+      { name: "殭屍猴王", minutes: [38, 45] },
+      { name: "地鐵幽靈", minutes: [45, 60] },
+      { name: "沼澤巨鱷", minutes: [90, 105] },
+      { name: "蘑菇王", minutes: [210, 240] },
+      { name: "殭屍蘑菇王", minutes: [195, 225] },
+      { name: "巨居蟹", minutes: [45, 60] },
+      { name: "咕咕鐘", minutes: [68, 90] },
+      { name: "仙人娃娃", minutes: [158, 180] },
+      { name: "喵怪仙人", minutes: [150, 170] },
+      { name: "書生", minutes: [150, 300] },
+      { name: "巨大深山人參", minutes: [60, 135] },
+      { name: "雪山魔女", minutes: [158, 180] },
+      { name: "肯的熊", minutes: [113, 128] },
     ];
 
     let logs = JSON.parse(localStorage.getItem("logs") || "[]");
